{
    "name": "PlayerControlMap",
    "maps": [
        {
            "name": "DefaultControls",
            "id": "2fb75018-1a36-408c-bbf0-d9cda56baf06",
            "actions": [
                {
                    "name": "LeftMouseButton",
                    "type": "Button",
                    "id": "14704795-a681-40d3-8f13-a1e8fc08307c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightMouseButton",
                    "type": "Button",
                    "id": "56d76572-4854-4646-bed9-91e9f40b594e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "e75a4711-f539-4286-85bb-efe6343aee66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosDelta",
                    "type": "Value",
                    "id": "507651f6-ff77-4a3c-8905-1fc87f3d8c73",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "79be43d7-2cec-4e01-9a3b-d7fe0c75ad7e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c7e9cd5b-c0c2-4ba4-99ff-f96f7fcc2fb4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4775e786-f54e-4f68-867d-2d5d7a682cc5",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "724d8126-bb43-4e9d-aabd-c3dcedb0581f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2914702-fa1d-48ed-bb34-5a1639db0273",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2e7f35a-18b8-4971-9729-cb77215a5411",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}